--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -15,9 +15,9 @@ on:
 #  push:
 #    tags:
 #      - '*'
-#  push:
-#    branches: 
-#      - master
+  push:
+    branches: 
+      - master
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede.git
   REPO_BRANCH: master
@@ -69,9 +69,8 @@ jobs:
         
       - name: SSH connection to Actions
         uses: P3TERX/debugger-action@master
-        if: env.SSH_ACTIONS == 'true'       
+        if: env.SSH_ACTIONS == 'true'     
         
-
       - name: Make download
         run: |
           make download -j8
@@ -116,4 +115,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bin/
+          asset_path: ./bin/targets/*/*/
