--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -15,9 +15,9 @@ on:
 #  push:
 #    tags:
 #      - '*'
-  push:
-    branches: 
-      - master
+#  push:
+#    branches: 
+#      - master
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede.git
   REPO_BRANCH: master
@@ -59,6 +59,9 @@ jobs:
           cd openwrt-packages
           git clone https://github.com/Lienol/openwrt-package.git
           git clone https://github.com/chengood5000/passwall652.git
+          cd lede/package/lean/  
+          git clone https://github.com/jerrykuku/lua-maxminddb.git  #git lua-maxminddb 依赖
+          git clone https://github.com/jerrykuku/luci-app-vssr.git  
           df -h
       - name: Update feeds
         run: |
