--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -59,7 +59,8 @@ jobs:
           cd openwrt-packages
           git clone https://github.com/Lienol/openwrt-package.git
           git clone https://github.com/chengood5000/passwall652.git
-          cd lede/package/lean/  
+          
+          cd package/lean/  
           git clone https://github.com/jerrykuku/lua-maxminddb.git  #git lua-maxminddb 依赖
           git clone https://github.com/jerrykuku/luci-app-vssr.git  
           df -h
