--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -12,7 +12,19 @@ on:
     - cron: 0 20 * * *
   release:
     types: [published]
-
+  push:
+    branches: 
+      - master
+env:
+  REPO_URL: https://github.com/coolsnowwolf/lede.git
+  REPO_BRANCH: master
+  CONFIG_FILE: .config
+#  DIY_SH: diy.sh
+#  FREE_UP_DISK: false
+  SSH_ACTIONS: true
+  UPLOAD_BIN_DIR: true
+  UPLOAD_FIRMWARE: true
+#  TZ: Asia/Shanghai
 jobs:
 
   build_openwrt:
