--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -68,9 +68,9 @@ jobs:
           chmod +x $DIY_P2_SH
           cd openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
-      - name: SSH connection to Actions
-        uses: P3TERX/debugger-action@master
-        if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
+#      - name: SSH connection to Actions
+#        uses: P3TERX/debugger-action@master
+#        if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
 
       - name: Generate configuration file
         run: make defconfig
