--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -61,13 +61,13 @@ jobs:
           sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-      - name: Load custom configuration
-        run: |
-          [ -e files ] && mv files openwrt/files
-          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-          chmod +x $DIY_P2_SH
-          cd openwrt
-          $GITHUB_WORKSPACE/$DIY_P2_SH
+#      - name: Load custom configuration
+#        run: |
+#          [ -e files ] && mv files openwrt/files
+#          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+#          chmod +x $DIY_P2_SH
+#          cd openwrt
+#          $GITHUB_WORKSPACE/$DIY_P2_SH
 #      - name: SSH connection to Actions
 #        uses: P3TERX/debugger-action@master
 #        if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
